--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-  <title>Employee Leave Management</title>
+  <title>Employees Leave Management</title>
   <style>
     * {
         margin: 0;
@@ -161,7 +161,7 @@
 <body>
 
   <section class="banner">
-    <h1>Employee Leave Management</h1>
+    <h1>Employees Leave Management</h1>
   </section>
 
   <section class="leave-overview">
